--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <section class="main-section">
             <div>
                 <div class="city-images">
-                    <img id="destination-img" src="assets/water-1.png" />
+                    <img id="destination-img" src="assets/destination-1.png" />
                     <img id="skyline-img" src="assets/skyline-1.png" />
-                    <img id="college-img" src="assets/nature-1.png" />
+                    <img id="college-img" src="assets/college-1.png" />
                 </div>
                 <div class="counts" id="count-message">
                     You haven't changed anything yet.
