add dropdown eventlisteners

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </button>
                 </div>
                 <div class="slogan-list" id="list">
-                    slogan list
+                    slogans will appear here 
                 </div>
             </div>
 
