created user name feature

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>   
             </div>
             <div class="welcome-to">
-                <h1>Welcome to <span id="city-name"></span>!</h1>
+                <h1>Welcome to Oxford, <span id="your-name"></span>!</h1>
             </div>
             <div class="user-inputs">
                 <div class="dropdowns">
@@ -49,9 +49,9 @@
                     </div> 
                 </div>
     
-                <div class="city-name-input-container">
-                        City name:
-                        <input id="city-name-input" />
+                <div class="your-name-input-container">
+                        What's your name?
+                        <input id="your-name-input" />
                 </div>
                 <div class="slogan-input-container">
                         Slogan:
