removed border, added text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
                 <div class="welcome-to">
                     <h1>Welcome to Oxford, <span id="your-name"></span>!</h1>
                 </div>
+            <div class="your-name-input-container">
+                    What's your name?
+                    <input id="your-name-input" />
+            </div>
                 <div class="dropdowns">
+                    Let's explore the city!
                     <select id="destination-dropdown">
                         <option value="1">Destination One</option>
                         <option value="2">Destination Two</option>
@@ -47,11 +52,6 @@
                     <div class="counts" id="count-message">
                         You haven't changed anything yet.
                     </div> 
-                </div>
-    
-                <div class="your-name-input-container">
-                        What's your name?
-                        <input id="your-name-input" />
                 </div>
                 <div class="slogan-input-container">
                         Slogan:
