--- a/index.html
+++ b/index.html
@@ -34,20 +34,23 @@
             </div>
                 <div class="dropdowns">
                     Let's explore the city!
-                    <select id="destination-dropdown">
-                        <option value="1">Destination One</option>
-                        <option value="2">Destination Two</option>
-                        <option value="3">Destination Three</option>
+                    <select class="destination" id="destination-dropdown">
+                        Destination:
+                        <option value="1">Bridge of Sighs</option>
+                        <option value="2">Christ Church Dining Hall</option>
+                        <option value="3">Bodleian Library</option>
                     </select>
-                    <select id="skyline-dropdown">
-                        <option value="1">Skyline One</option>
-                        <option value="2">Skyline Two</option>
-                        <option value="3">Skyline Three</option>
+                    <select class="skyline" id="skyline-dropdown">
+                        Skyline:
+                        <option value="1">Spires at Sunset</option>
+                        <option value="2">Aerial of Exeter</option>
+                        <option value="3">Sunset on the City</option>
                     </select>
-                    <select id="college-dropdown">
-                        <option value="1">College One</option>
-                        <option value="2">College Two</option>
-                        <option value="3">College Three</option>
+                    <select class="college" id="college-dropdown">
+                        College:
+                        <option value="1">Magdalen</option>
+                        <option value="2">Wolfson Punting Harbour</option>
+                        <option value="3">Keble</option>
                     </select>
                     <div class="counts" id="count-message">
                         You haven't changed anything yet.
