--- a/index.html
+++ b/index.html
@@ -32,26 +32,31 @@
                     What's your name?
                     <input id="your-name-input" />
             </div>
-                <div class="dropdowns">
+                <div class="explore-city">
                     Let's explore the city!
-                    <select class="destination" id="destination-dropdown">
-                        Destination:
-                        <option value="1">Bridge of Sighs</option>
-                        <option value="2">Christ Church Dining Hall</option>
-                        <option value="3">Bodleian Library</option>
-                    </select>
-                    <select class="skyline" id="skyline-dropdown">
-                        Skyline:
-                        <option value="1">Spires at Sunset</option>
-                        <option value="2">Aerial of Exeter</option>
-                        <option value="3">Sunset on the City</option>
-                    </select>
-                    <select class="college" id="college-dropdown">
-                        College:
-                        <option value="1">Magdalen</option>
-                        <option value="2">Wolfson Punting Harbour</option>
-                        <option value="3">Keble</option>
-                    </select>
+                    <div class="options">
+                        <div>Destination:
+                        <select id="destination-dropdown">
+                                <option value="1">Bridge of Sighs</option>
+                                <option value="2">Christ Church Dining Hall</option>
+                                <option value="3">Bodleian Library</option>
+                        </select>
+                        </div>
+                        <div>Skyline:
+                        <select id="skyline-dropdown">
+                                <option value="1">Spires at Sunset</option>
+                                <option value="2">Aerial of Exeter</option>
+                                <option value="3">Sunset on the City</option>
+                        </select>
+                        </div>
+                        <div>College:
+                        <select id="college-dropdown">
+                            <option value="1">Magdalen</option>
+                            <option value="2">Wolfson Punting Harbour</option>
+                            <option value="3">Keble</option>
+                        </select>
+                    </div>
+                </div>
                     <div class="counts" id="count-message">
                         You haven't changed anything yet.
                     </div> 
